--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        table, th, td {
-          border:1px solid black;
-        }
-    </style>
-    <body>
-        <table style="width:60%" align="center">
-            <tbody>
-                <tr>
-                    <td>Link to Homework #1 </td>
-                    <td>Link to Homework #2</td>
-                </tr>
-                <tr>
-                    <td><a>Link to Homework #3</a></td>
-                    <td><a>Link to Homework #4</a></td>
-                </tr>
-                <tr>
-                    <td>Link to Homework #5</td>
-                    <td><a>Link to Homework #6</a></td>
-                </tr>
-                <tr>
-                    <td>Link to Homework #7</td>
-                    <td><a>Link to Homework #8</a></td>
-                </tr>
-                <tr>
-                    <td>Link to Homework #9</td>
-                    <td>Link to Homework #10</td>
-                </tr>
-            </tbody>
-        </table>
-    </body>
+<head>
+<style>
+table, th, td {
+  border: 5px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 5px;
+}
+</style>
+</head>
+<body>
+
+<table style="width:60%" align = "center">
+  <tr>
+    <td>Link to Homework #1 </td>
+    <td>Link to Homework #2</td>
+  </tr>
+  <tr>
+    <td><a href= "ScrambleThisName.html">Link to Homework #3</a></td>
+    <td><a href= "ScrambleThisName.html">Link to Homework #4</a></td>
+  </tr>
+  <tr>
+    <td>Link to Homework #5</td>
+    <td><a href= "ScrambleThisName.html">Link to Homework #6</a></td>
+  </tr>
+  <tr>
+    <td>Link to Homework #7</td>
+    <td><a href= "ScrambleThisName.html">Link to Homework #8</a></td>
+  </tr>
+  <tr>
+    <td>Link to Homework #9</td>
+    <td>Link to Homework #10</td>
+  </tr>
+  </table>
+</body>
 </html>
